--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -833,27 +833,23 @@ footer {
     }
     .sub-con11-text{
       margin-left: -256%;
-      h3{
-        margin-top: 5%;
-        color:$text-color2;
-      }
-      h4{
-        color:$main-color;
-      }
-      p{
-        padding:1px;
-      }
       .border {
-        width: 4%;
+        width: 7%;
         color: $main-color;
         border-top: 4px solid;
         opacity: 30%;
       }
       .border2 {
         display: grid;
-        width: 14%;
+        width: 24%;
         color: $primary-background;
         border-top: 4px solid;
+      }
+      h3{
+        color:$text-color2;
+      }
+      h4{
+        color:$main-color;
       }
     }
   }
